# pyOTTR

./: .buildinfo  .gitignore  .travis.yml  LICENSE  README.md  README.rst  genindex.html  index.html  objects.inv  ottr.base.html  ottr.html  ottr.parsers.html  ottr.parsers.stottr.html  ottr.tpl.html  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.py
_sources/: ottr.base.rst.txt  ottr.rst.txt  ottr.tpl.rst.txt  quickstart.rst.txt
docs/: Makefile
docs/source/: conf.py  index.rst  ottr.parsers.rst  ottr.parsers.stottr.rst  ottr.rst  ottr.tpl.owl.rst  ottr.tpl.rst
ottr/: __init__.py  generator.py  types.py
ottr/base/: argument.py  base_templates.py  expansion.py  parameter.py  template.py  utils.py
ottr/parsers/: __init__.py  pottr.py
ottr/parsers/pottr/: __init__.py  lexer.py  parser.py
ottr/parsers/stottr/: __init__.py  lexer.py  parser.py
ottr/tpl/: __init__.py  rdf.py  rdfs.py
tests/: expansion_test.py  parameter_test.py  stottr_test.py
